--- a/homepage.html
+++ b/homepage.html
@@ -1,8 +1,39 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Test</title>
-		<body>I would like this to be a dance
-		</body>
+		<title>J dog's weebsite</title>
+		<h3>Welcome to Julio's Puppy Kennel!!</h3>
 	</head>
+<body>
+
+<p>These puppies are mostly trained to listen to <s>All</s> most commands when
+they feel like it. Again <i><strong>Mostly trained</strong></i>.</p>
+<h4>The following is a list of avialiable puppies that we have
+	at our store at the moment. Please be advise that this list is
+	subject to change at any time.
+</h4>
+
+<table>
+	<th scope="col">Name</th><th scope="col">Breed</th><th scope="col">Age</th><th scope="col"><center>Aggresiveness <br>1-5 </th><th>Suffers From</th>
+	<tr>
+		<td>Koda</td><td>Miniture red fox</td><td>3</td><td>5 when it comes to CJ <br>random with anything else</td><td><abbr title="Fare Of Missing Out">FOMO</abbr></td>
+	</tr>
+	<tr>
+		<td>Rosie</td><td>Raccon</td><td>4</td><td>1 towards small dogs <br>5 towards large dogs</td><td><s>Larger</s> Taller dogs <br>Loud Noises</td>
+	</tr>
+	<tr>
+		<td>Zoey</td><td>DM14</td><td>9 months</td><td>1 super friendly</td><td>Peeing <strong>Everywhere</strong> Upon excitment</td>
+	</tr>
+</table>
+
+</body>
+
+<footer>
+	<h6>Weebsite made by <i>Julio Bautista</i>. The Dominican Prodigy</h6>
+	<address class="addy">
+		45 W Haines St. (Apt 206) Philadelphia PA. 19144
+	</address>
+	<small></small>
+</footer>
+
 </html>
