Updated the contact

--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html>
 	<head>
 		<title>J dog's weebsite</title>
+		<link rel="stylesheet" href="styles.css">
 		<h3>Welcome to Julio's Puppy Kennel!!</h3>
 	</head>
 <body>
 <ul>
-	<li><a href="aboutUs.html">about us</a></li>
+	<li><a href="aboutUs.html">About us</a></li>
 	<li><a href="#">Contact Infomation</a></li>
 	<li>The Great Baller</li>
 </ul>
@@ -34,10 +35,6 @@ they feel like it. Again <i><strong>Mostly trained</strong></i>.</p>
 
 <footer>
 	<h6>Weebsite made by <i>Julio Bautista</i>. The Dominican Prodigy</h6>
-	<address class="addy">
-		45 W Haines St. (Apt 206) Philadelphia PA. 19144
-	</address>
-	<small></small>
 </footer>
 
 </html>
