--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <body>
 <ul>
 	<li><a href="aboutUs.html">About us</a></li>
-	<li><a href="#">Contact Infomation</a></li>
-	<li>The Great Baller</li>
+	<li><a href="contact.html">Contact Infomation</a></li>
+	<li><a href="Koda">The Great Baller</a></li>
 </ul>
 <p>These puppies are mostly trained to listen to <s>All</s> most commands when
 they feel like it. Again <i><strong>Mostly trained</strong></i>.</p>
@@ -17,8 +17,8 @@ they feel like it. Again <i><strong>Mostly trained</strong></i>.</p>
 	at our store at the moment. Please be advise that this list is
 	subject to change at any time.
 </h4>
-
-<table>
+<div id="table">
+	<table>
 	<th scope="col">Name</th><th scope="col">Breed</th><th scope="col">Age</th><th scope="col"><center>Aggresiveness <br>1-5 </th><th>Suffers From</th>
 	<tr>
 		<td>Koda</td><td>Miniture red fox</td><td>3</td><td>5 when it comes to CJ <br>random with anything else</td><td><abbr title="Fare Of Missing Out">FOMO</abbr></td>
@@ -29,8 +29,19 @@ they feel like it. Again <i><strong>Mostly trained</strong></i>.</p>
 	<tr>
 		<td>Zoey</td><td>DM14</td><td>9 months</td><td>1 super friendly</td><td>Peeing <strong>Everywhere</strong> Upon excitment</td>
 	</tr>
-</table>
+	<tr>
+		<td>Trumbo</td><td>No Idea</td><td>1 year</td><td>Only to the neighbor</td><td>Marking his territory</td>
+	</tr>
+	</table>
+</div>
 
+<div id="imgs">
+<figure>
+	<img id="Koda" src="Imgs\Koda\IMG_6089.jpg" alt="Koda with his Uncle" class="rotate90">
+	<figcaption>Koda and his Uncle</figcaption>
+</figure>
+
+</div>
 </body>
 
 <footer>
