--- a/contact.html
+++ b/contact.html
@@ -13,10 +13,14 @@
     <div class="Socials">
       <h5>Socials</h5>
       <ul>
-        <li><a href="https://www.instagram.com/cheaag/?hl=en">Instagram</a></li>
-        <li><a href="https://www.linkedin.com/in/julio-bautista-495699126/">LinkedIn</a></li>
+        <li><a href="https://www.instagram.com/cheaag/?hl=en"><img src="Imgs\icons\icons8-instagram-50.png" alt="">Instagram</a></li>
+        <li><a href="https://www.linkedin.com/in/julio-bautista-495699126/"><img src="Imgs\icons\icons8-linkedin-50.png" alt="">LinkedIn</a></li>
       </ul>
     </div>
+  <nav>
+
+  </nav>
+
 
   </body>
 </html>
