--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
   <body>
     <h3>Julio Bautista Contact Information</h3>
     <address class="addy">
-      45 W Haines St. (Apt 206) Philadelphia PA. 19144
+      108 W Haines St.  Philadelphia PA. 89123
     </address>
     <div class="Socials">
       <h5>Socials</h5>
