--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <ul>
 	<li><a href="aboutUs.html">About us</a></li>
 	<li><a href="contact.html">Contact Infomation</a></li>
-	<li><a href="Koda">The Great Baller</a></li>
+	<li><a href="#Koda">The Great Baller</a></li>
 </ul>
 <p>These puppies are mostly trained to listen to <s>All</s> most commands when
 they feel like it. Again <i><strong>Mostly trained</strong></i>.</p>
