--- a/index.html
+++ b/index.html
@@ -17,6 +17,17 @@ they feel like it. Again <i><strong>Mostly trained</strong></i>.</p>
 	at our store at the moment. Please be advise that this list is
 	subject to change at any time.
 </h4>
+
+<form action="index.html" method="post">
+	<select name="DogName">
+		<option value="Koda"></option>
+		<option value="Rosie"></option>
+		<option value="Zoey"></option>
+		<option value="Trumbo"></option>
+		<option value="Shiloh"></option>
+	</select>
+</form>
+
 <div id="table">
 	<table>
 	<th scope="col">Name</th><th scope="col">Breed</th><th scope="col">Age</th><th scope="col"><center>Aggresiveness <br>1-5 </th><th>Suffers From</th>
@@ -27,21 +38,27 @@ they feel like it. Again <i><strong>Mostly trained</strong></i>.</p>
 		<td>Rosie</td><td>Raccon</td><td>4</td><td>1 towards small dogs <br>5 towards large dogs</td><td><s>Larger</s> Taller dogs <br>Loud Noises</td>
 	</tr>
 	<tr>
-		<td>Zoey</td><td>DM14</td><td>9 months</td><td>1 super friendly</td><td>Peeing <strong>Everywhere</strong> Upon excitment</td>
+		<td>Zoey</td><td>DM14</td><td>9 months</td><td>1 super friendly</td><td>Peeing <strong>Everywhere</strong> Upon Excitment</td>
 	</tr>
 	<tr>
-		<td>Trumbo</td><td>No Idea</td><td>1 year</td><td>Only to the neighbor</td><td>Marking his territory</td>
+		<td>Trumbo</td><td>Mop</td><td>1 and some change</td><td>Only to the neighbor</td><td>Marking his territory</td>
+	</tr>
+	<tr>
+		<td>Shiloh</td><td>Wolf</td><td>4</td><td>Non-aggressive</td><td>Extreme Shedding</td>
 	</tr>
 	</table>
 </div>
 
 <div id="imgs">
 <figure>
-	<img id="Koda" src="Imgs\Koda\IMG_6089.jpg" alt="Koda with his Uncle" class="rotate90">
-	<figcaption>Koda and his Uncle</figcaption>
+	<img id="Koda" src="Imgs\Koda\IMG_6089.jpg" alt="Koda with his Uncle" class="rotate90" width=500px >
+	<figcaption>Koda as an old lady</figcaption>
 </figure>
 
 </div>
+<form class="" action="index.html" method="post">
+
+</form>
 </body>
 
 <footer>
