--- a/index.html
+++ b/index.html
@@ -1,16 +1,31 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>J dog's weebsite</title>
+		<meta charset="utf-8" name="viewport" content="width=device-width, initail-scale=1.0">
+		<title>Cheaag Inc.</title>
+		<link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@700&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="styles.css">
-		<h3>Welcome to Julio's Puppy Kennel!!</h3>
 	</head>
+
 <body>
-<ul>
-	<li><a href="aboutUs.html">About us</a></li>
-	<li><a href="contact.html">Contact Infomation</a></li>
-	<li><a href="#Koda">The Great Baller</a></li>
-</ul>
+	<header>
+		<a href="index.html" class="brand-logo">Cheaag Inc.</a>
+		<nav>
+			<ul>
+				<li><a href="aboutUs.html">About us</a></li>
+				<li><a href="contact.html">Contact Infomation</a></li>
+				<li><a href="#Koda">The Great Baller</a></li>
+			</ul>
+		</nav>
+	</header>
+
+<main>
+	<section>
+		<h2>Welcome to Julio's Puppy Kennel!!</h2>
+	</section>
+</main>
+
+<h2>Welcome to Julio's Puppy Kennel!!</h2>
 <p>These puppies are mostly trained to listen to <s>All</s> most commands when
 they feel like it. Again <i><strong>Mostly trained</strong></i>.</p>
 <h4>The following is a list of avialiable puppies that we have
@@ -64,7 +79,7 @@ they feel like it. Again <i><strong>Mostly trained</strong></i>.</p>
 
 <div id="imgs">
 <figure>
-	<img id="Koda" src="Imgs\Koda\IMG_6089.jpg" alt="Koda with his Uncle" class="rotate90" width=200px >
+
 	<figcaption>Koda as an old lady</figcaption>
 </figure>
 
