--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 		<link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@700&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="styles.css">
 	</head>
-
 <body>
 	<header>
 		<a href="index.html" class="brand-logo">Cheaag Inc.</a>
@@ -20,12 +19,12 @@
 	</header>
 
 <main>
-	<section>
-		<h2>Welcome to Julio's Puppy Kennel!!</h2>
+	<section class="banner-index">
+		<p>Welcome to Julio's Puppy Kennel!!</p>	
 	</section>
 </main>
 
-<h2>Welcome to Julio's Puppy Kennel!!</h2>
+
 <p>These puppies are mostly trained to listen to <s>All</s> most commands when
 they feel like it. Again <i><strong>Mostly trained</strong></i>.</p>
 <h4>The following is a list of avialiable puppies that we have
