--- a/aboutUs.html
+++ b/aboutUs.html
@@ -3,8 +3,35 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Cheaag Inc.</title>
+    <!-- Bootstrap css file  -->
+    		<link rel="stylesheet" href="./css/bootsrap.min.css">
+    		<link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@700&display=swap" rel="stylesheet">
+    		<link rel="stylesheet" href="./css/newCSS.css">
+    <!-- QUESTION: Jquery -->
+    		<script src="./js/bootstrap.3.5.0.js"></script>
+    		<script src="./js/bootstrap.min.js"type="text/javascript"></script>
   </head>
   <body>
+<!-- =======================Start Header Area===================  -->
+  <header class="header_area">
+    <div class="main-menu">
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#">Navbar</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav">
+        <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-item nav-link" href="#">Features</a>
+        <a class="nav-item nav-link" href="#">Pricing</a>
+        <a class="nav-item nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+      </div>
+    </div>
+  </nav>
+    </div>
+  </header>
+
   </body>
 </html>
