--- a/index.html
+++ b/index.html
@@ -3,8 +3,14 @@
 	<head>
 		<meta charset="utf-8" name="viewport" content="width=device-width, initail-scale=1.0">
 		<title>Cheaag Inc.</title>
+
+<!-- Bootstrap css file  -->
+		<link rel="stylesheet" href="./css/bootsrap.min.css">
 		<link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@700&display=swap" rel="stylesheet">
-		<link rel="stylesheet" href="styles.css">
+		<link rel="stylesheet" href="./css/styles.css">
+<!-- QUESTION: Jquery -->
+		<script src="./js/bootstrap.3.5.0.js"></script>
+		<script src="./js/bootstrap.min.js"type="text/javascript"></script>
 	</head>
 <body>
 	<header>
@@ -20,7 +26,7 @@
 
 <main>
 	<section class="banner-index">
-		<p>Welcome to Julio's Puppy Kennel!!</p>	
+		<p>Welcome to Julio's Puppy Kennel!!</p>
 	</section>
 </main>
 
@@ -32,60 +38,72 @@ they feel like it. Again <i><strong>Mostly trained</strong></i>.</p>
 	subject to change at any time.
 </h4>
 
-<form action="index.html" method="post">
-	<p>Which Dog would you like to buy?</p>
-	<select name="DogName" size="3" style="width: 100px" >
-		<option value="Koda">Koda</option>
-		<option value="Rosie">Rosie</option>
-		<option value="Zoey">Zoey</option>
-		<option value="Trumbo">Trumbo</option>
-		<option value="Shiloh">Shiloh</option>
-	</select>
-	<input type="submit" name="DogName" value="Buy">
-</form>
-
-<fieldset>
-	<legend>Contact Information</legend>
-	<label>Name:<br>
-	<input type="text" name="Name">
-	</label><br>
-	<label>Email:<br>
-	<input type="text" name="email"></label>
-	<br>
-	<label>Mobile:<br><input type="text" name="mobile"></label>
-</fieldset>
-
-<div id="table">
+<div class="table">
 	<table>
 	<th scope="col">Name</th><th scope="col">Breed</th><th scope="col">Age</th><th scope="col"><center>Aggresiveness <br>1-5 </th><th>Suffers From</th>
-	<tr>
-		<td>Koda</td><td>Miniture red fox</td><td>3</td><td>5 when it comes to CJ <br>random with anything else</td><td><abbr title="Fare Of Missing Out">FOMO</abbr></td>
-	</tr>
-	<tr>
-		<td>Rosie</td><td>Raccon</td><td>4</td><td>1 towards small dogs <br>5 towards large dogs</td><td><s>Larger</s> Taller dogs <br>Loud Noises</td>
-	</tr>
-	<tr>
-		<td>Zoey</td><td>DM14</td><td>9 months</td><td>1 super friendly</td><td>Peeing <strong>Everywhere</strong> Upon Excitment</td>
-	</tr>
-	<tr>
-		<td>Trumbo</td><td>Mop</td><td>1 and some change</td><td>Only to the neighbor</td><td>Marking his territory</td>
-	</tr>
-	<tr>
-		<td>Shiloh</td><td>Wolf</td><td>4</td><td>Non-aggressive</td><td>Extreme Shedding</td>
-	</tr>
+		<tr>
+			<td>Koda</td>
+			<td>Miniture red fox</td>
+			<td>3</td>
+			<td>5 when it comes to CJ <br>random with anything else</td>
+			<td><abbr title="Fare Of Missing Out">FOMO</abbr></td>
+		</tr>
+		<tr class="even">
+			<td>Rosie</td>
+			<td>Raccon</td>
+			<td>4</td>
+			<td>1 towards small dogs <br>5 towards large dogs</td>
+			<td><s>Larger</s> Taller dogs <br>Loud Noises</td>
+		</tr>
+		<tr>
+			<td>Zoey</td>
+			<td>DM14</td>
+			<td>9 months</td>
+			<td>1 super friendly</td>
+			<td>Peeing <strong>Everywhere</strong> Upon Excitment</td>
+		</tr>
+		<tr class="even">
+			<td>Trumbo</td>
+			<td>Mop</td>
+			<td>1 and some change</td>
+			<td>Only to the neighbor</td>
+			<td>Marking his territory</td>
+		</tr>
+		<tr>
+			<td>Shiloh</td>
+			<td>Wolf</td>
+			<td>4</td>
+			<td>Non-aggressive</td>
+			<td>Extreme Shedding</td>
+		</tr>
 	</table>
 </div>
 
-<div id="imgs">
-<figure>
+<div>
 
-	<figcaption>Koda as an old lady</figcaption>
-</figure>
-
+		<fieldset class="contactInfo">
+			<legend>Contact Information</legend>
+			<label>Name:<br>
+			<input type="text" name="Name">
+			</label><br>
+			<label>Email:<br>
+			<input type="text" name="email"></label>
+			<br>
+			<label>Mobile:<br><input type="text" name="mobile"></label>
+		</fieldset>
+	<form action="index.html" method="post" class="form">
+		<p>Which Dog would you like to buy?</p>
+		<select name="DogName" size="3" style="width: 100px" >
+			<option value="Koda">Koda</option>
+			<option value="Rosie">Rosie</option>
+			<option value="Zoey">Zoey</option>
+			<option value="Trumbo">Trumbo</option>
+			<option value="Shiloh">Shiloh</option>
+		</select>
+		<input type="submit" name="DogName" value="Buy">
+	</form>
 </div>
-<form class="" action="index.html" method="post">
 
-</form>
 </body>
 
 <footer>
